# tinytrail

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  logger.py  main.py  models.py  routes.py  utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: CreateUrlForm.tsx  DeleteUrlForm.tsx  GetStatsForm.tsx  HomePage.tsx  RedirectPage.tsx  UpdateUrlForm.tsx
frontend/src/types/: types.ts
